# mplat-nestjs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml
server/: .env  package.json
server-rs/: CLAUDE.md  Cargo.toml
server-rs/actix-extensible-rate-limit/: Cargo.toml
server-rs/actix-extensible-rate-limit/src/: lib.rs
server-rs/actix-extensible-rate-limit/src/backend/: input_builder.rs  memory.rs  mod.rs  redis.rs
server-rs/actix-extensible-rate-limit/src/middleware/: builder.rs  mod.rs  tests.rs
server-rs/config/: Cargo.toml
server-rs/config/src/: lib.rs
server-rs/database/: Cargo.toml
server-rs/database/migrations/: convert_to_timestamptz.sql  init.sql
server-rs/database/src/: db.rs  lib.rs
server-rs/database/src/repository/: admin.rs  comm_kv.rs  mod.rs  user.rs  wxcallback.rs
server-rs/error/: Cargo.toml
server-rs/error/src/: lib.rs
server-rs/routes/: Cargo.toml
server-rs/routes/src/: admin.rs  auth_page.rs  lib.rs  user.rs  wxcallback.rs
server-rs/routes/src/middleware/: async_auth_middleware.rs  mod.rs  rate_limit.rs
server-rs/server/: .env  Cargo.toml
server-rs/server/src/: cli.rs  lib.rs  main.rs  server.rs
server-rs/service/: Cargo.toml
server-rs/service/src/: admin.rs  auth_page.rs  lib.rs  user.rs  wxcallback.rs
server-rs/structs/: Cargo.toml
server-rs/structs/src/: lib.rs
server-rs/structs/src/dto/: admin.rs  auth_page.rs  mod.rs  user.rs  wxcallback.rs
server-rs/structs/src/sqlx/: mod.rs
server-rs/utils/: Cargo.toml
server-rs/utils/src/: constants.rs  lib.rs  replace_file.rs
server-rs/utils/src/date_time/: mod.rs
server-rs/utils/src/serde_utils/: format_date.rs  format_date_time.rs  format_option_dt.rs  mod.rs
server-rs/wechat-third-platform/: Cargo.toml
server-rs/wechat-third-platform/src/: error.rs  lib.rs  service.rs  util.rs  xml_parser.rs
server-rs/wechat-third-platform/src/services/: get_authorizer_info.rs  get_authorizer_list.rs  get_preauth_code.rs  mod.rs
server/prisma/: schema.prisma  seed.ts
server/src/: app.module.ts  main.ts
server/src/admin/: admin.controller.ts  admin.service.ts
server/src/admin/dto/: change-pwd.dto.ts
server/src/auth/: aut.service.ts  auth.controller.ts  auth.module.ts
server/src/auth/dto/: auth.dto.ts
server/src/auth/strategy/: jwt.strategy.ts
server/src/authpage/: authpage.controller.spec.ts  authpage.controller.ts  authpage.module.ts  authpage.service.spec.ts  authpage.service.ts
server/src/authpage/dto/: create-authpage.dto.ts  update-authpage.dto.ts
server/src/decorator/: data-response.decorator.ts  get-time.decorator.ts  get-user.decorator.ts  index.ts  ip.decorator.ts
server/src/exceptions/: custom.exception.ts
server/src/filters/: error.filter.ts
server/src/guard/: admin-only.guard.ts  index.ts  ip.guard.ts
server/src/interceptor/: transform.interceptor.ts
server/src/prisma/: prisma.service.ts
server/src/utils/: index.ts
server/src/wx/: wx.module.ts  wx.service.ts
server/src/wxcallback/: wxcallback.controller.spec.ts  wxcallback.controller.ts  wxcallback.module.ts  wxcallback.service.spec.ts  wxcallback.service.ts
server/src/wxcallback/dto/: create-wxcallback.dto.ts  update-wxcallback.dto.ts
