[workspace]
resolver = "3"

members = [
    "actix-extensible-rate-limit",
    "config",
    "database", 
    "error", 
    "routes",
    "server", 
    "service",
    "structs", 
    "utils", 
]

[workspace.dependencies]
tokio = { version = "1.51.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.7"
thiserror = "2"
chrono = { version  = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["registry","env-filter"] }
dotenv = "0.15"
bytes = "1.11.1"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1"
strum = { version = "0.28.0", features = ["derive"] }
actix-web = "4.13.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "uuid", "postgres", "migrate", "chrono", "time","rust_decimal" ] }
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
actix-multipart = "0.7.2"
systemd-service = "0.3.1"
lazy_static = "1.5.0"
futures-util = "0.3.32"
dashmap = { version = "6.1.0" }
bcrypt = "0.19"
rust_decimal = "1.35"
itertools = "0.14"



database = { path = "./database" }
error = { path = "./error" }
utils = { path = "./utils" }
service = { path = "./service" }
config = { path = "./config" }
actix-extensible-rate-limit = { path = "./actix-extensible-rate-limit" }
routes = { path = "./routes" }
structs = { path = "./structs"  }

[profile.release]
opt-level = 'z'    # Optimize for size
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Optimize across the whole codebase (slower build)
strip = true       # Automatically strip symbols from the binary.
