[package]
name = "config"
version = "1.0.1"
edition = "2024"

[dependencies]
chrono.workspace = true
serde.workspace = true
dotenv.workspace = true
error.workspace = true
sqlx.workspace = true
serde_json.workspace = true
structs.workspace = true
tokio.workspace = true
tracing.workspace = true
wechat-third-platform.workspace = true