[package]
name = "error"
version = "1.0.1"
edition = "2024"

[dependencies]
sqlx.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
actix-web.workspace = true
systemd-service.workspace = true
strum.workspace = true
validator.workspace = true
tracing.workspace = true