[package]
name = "service"
version = "1.0.1"
edition = "2024"

[dependencies]
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
actix-web.workspace = true
jsonwebtoken.workspace = true
itertools.workspace = true
uuid.workspace = true
database.workspace = true
error.workspace = true
utils.workspace = true
tokio.workspace = true
structs.workspace = true
serde_json.workspace = true
bcrypt.workspace = true