[package]
name = "wechat-third-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
aes.workspace = true
cbc.workspace = true
cipher.workspace = true
sha1.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true